[package]
name = "server"
version = "0.1.0"
authors = ["cromarmot <yexiaorain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-protobuf = "0.5.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
failure = "0.1.8"
futures = "0.3.5"
log = "0.4.11"
env_logger = "0.7.1"
chrono = "0.4.15"
version = "1.1.0"
tokio = "0.2.22"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["async-std-runtime"]

